# coding-agent

./: .gitignore  .params.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/agent-context/: Cargo.toml
crates/agent-context/src/: file_index.rs  lib.rs  session_context.rs  workspace.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  builder.rs  dispatch.rs  lib.rs  loop_runner.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: anthropic.rs  gemini.rs  lib.rs  provider.rs  request.rs  stream.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: error.rs  event.rs  lib.rs  message.rs  session.rs  tool.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: approval.rs  lib.rs  registry.rs  sandbox.rs
crates/agent-tools/src/impls/: file_read.rs  file_search.rs  file_write.rs  git.rs  memory.rs  mod.rs  shell.rs
crates/cli/: Cargo.toml
crates/cli/src/: approval.rs  display.rs  main.rs  session.rs
scripts/: start.sh
