[workspace]
members = [
    "crates/agent-protocol",
    "crates/agent-llm",
    "crates/agent-tools",
    "crates/agent-context",
    "crates/agent-core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

# Internal crates
agent-protocol = { path = "crates/agent-protocol" }
agent-llm      = { path = "crates/agent-llm" }
agent-tools    = { path = "crates/agent-tools" }
agent-context  = { path = "crates/agent-context" }
agent-core     = { path = "crates/agent-core" }
