[package]
name = "agent-context"
description = "Workspace indexing, file tree, and in-session context tracking."
version.workspace = true
edition.workspace = true

[dependencies]
agent-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
