[package]
name = "agent-core"
description = "Orchestration engine: conversation loop, tool dispatch, event emission."
version.workspace = true
edition.workspace = true

[dependencies]
agent-protocol = { workspace = true }
agent-llm      = { workspace = true }
agent-tools    = { workspace = true }
agent-context  = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
