[package]
name = "agent-tools"
description = "Tool trait, registry, approval callback, and sandboxed tool implementations."
version.workspace = true
edition.workspace = true

[dependencies]
agent-protocol = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
