[package]
name = "code-agent"
description = "CLI frontend for code-agent."
version.workspace = true
edition.workspace = true

[[bin]]
name = "code-agent"
path = "src/main.rs"

[dependencies]
agent-core     = { workspace = true }
agent-protocol = { workspace = true }
agent-llm      = { workspace = true }
agent-tools    = { workspace = true }

tokio          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
clap           = { workspace = true }
colored        = { workspace = true }
async-trait    = { workspace = true }
